...
    var previewLayer: AVCaptureVideoPreviewLayer?        // Layer used to display the camera feed

    // MARK: - Lifecycle Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        checkCameraPermission()
        backButton?.accessibilityIdentifier = "BackButtonAccessibilityID"
        simulateScanButton?.accessibilityIdentifier = "SimulateScanButtonAccessibilityID"
        NotificationCenter.default.addObserver(self, selector: #selector(checkCameraPermissions), name: UIApplication.willEnterForegroundNotification, object: nil)
    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        // Restart capture session if it was previously stopped
...
