...

enum RegexTitles {
    
    static let settings = NSLocalizedString("Go To Settings", comment: "")
    static let permissionDenied = NSLocalizedString("Permission Denied", comment: "")
    static let retry = NSLocalizedString("Retry", comment: "")
    static let cancel = NSLocalizedString("Cancel", comment: "")
    static let okTitle = NSLocalizedString("OK", comment: "")
    static let result = NSLocalizedString("Result", comment: "")
    static let cameraPermissionError = NSLocalizedString("Camera Permission Required", comment: "")
    static let openSettings = NSLocalizedString("Open Settings", comment: "")
    static let locationServicesDisabled = NSLocalizedString("Location Services Disabled", comment: "")
    static let locationServicesRequired = NSLocalizedString("Location Permission Required", comment: "")
    static let chooseOption = NSLocalizedString("Choose Option", comment: "")
    static let camera = NSLocalizedString("Camera", comment: "")
    static let gallery = NSLocalizedString("Gallery", comment: "")
    
...
